# smart-ace

./: .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: demo_cloud_impact_on_ground_flux.py  demo_cloud_kext_ground_flux.py  demo_cloud_shapes.py  demo_create_atm.py  demo_hyp_cloud_ground.py  demo_observable.py  demo_transect_pressure.py
src/smart_ace/: __init__.py  hash.py
src/smart_ace/atmosphere/: __init__.py  atmosphere.py  build.py  params.py
src/smart_ace/geometry/: __init__.py  geometry.py  plot.py  shapes.py  voxelize.py
src/smart_ace/observables/: __init__.py  layout.py  observable.py  plot.py  sensor.py
