[project]
authors = [{name = "walcark", email = "kevin.walcarius@cnes.fr"}]
dependencies = []
name = "smart-ace"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
smart_ace = { path = ".", editable = true }

[tool.pixi.tasks]
