[project]
authors = [{name = "walcark", email = "kevin.walcarius@cnes.fr"}]
dependencies = []
name = "smart-ace"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff]
fix = true
line-length = 79
indent-width = 4
exclude = ["tests/*", "docs/*", "scripts/*", "test.py", "notebooks/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
fixable = ["ALL"]
unfixable = []
pydocstyle = { convention = "numpy" }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
smart_ace = { path = ".", editable = true }
scienceplots = ">=2.0"

[tool.pixi.dependencies]
python = "3.12.*"
pydantic = ">=2.13.4,<3"
numpy = ">=2.4.6,<3"
matplotlib = ">=3.11.0,<4"
smartg = ">=1.2.0"
luts = ">=1.0.6,<2"

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.11"
pre-commit = ">=4.2"
mypy = ">=1.5"

[tool.pixi.feature.gpu]

[tool.pixi.environments]
default = ["gpu"]
dev = ["dev", "gpu"]
